infra/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-alqemam
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-alqemam
  template:
    metadata:
      labels:
        app: api-alqemam
    spec:
      containers:
        - name: api-alqemam
          image: hub.hivespaces.org/alqemam/api
          resources:
            requests:
              cpu: '50m'
              memory: '128Mi'
            limits:
              memory: '256Mi'
              cpu: '100m'
---
apiVersion: v1
kind: Service
metadata:
  name: api-alqemam-srv
  namespace: production
spec:
  selector:
    app: api-alqemam
  ports:
    - name: api-alqemam
      protocol: TCP
      port: 3000
      targetPort: 3000
